--- a/src/app/employee-detail/employee-detail.component.html
+++ b/src/app/employee-detail/employee-detail.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="userId">
+<div *ngIf="selectedEmployee">
   <!-- <div *ngIf="selectedEmployee"> -->
   <h2>{{ selectedEmployee?.preferredFullName }}</h2>
   <div><span>id: </span>{{ selectedEmployee?.userId }}</div>
